Добавлен auth.css

--- a/docs/презентация.md
+++ b/docs/презентация.md
@@ -30,7 +30,7 @@ style: |
 
 ---
 # WebPRND
-![bg fit](img/webprnd.png)
+![bg fit inve](img/webprnd.png)
 
 ---
 ### Основные используемые технологии:
@@ -46,6 +46,13 @@ style: |
 При разработке первой рабочей версии редактора
 страница не имела файла .css и была сделана чисто
 на <g>Bootstrap</g>
+
+---
+### История разработки
+![bg right](img/early.png)
+
+---
+
 
 ---
 # Спасибо за внимание :>
