--- a/docs/презентация.md
+++ b/docs/презентация.md
@@ -11,7 +11,7 @@ style: |
     font-weight: bold;
   }
   :root { 
-    --sequence-theme: hand
+    --sequence-theme: hand;
     --color-background: #282828;
     --color-background-code: #1d2021;
     --color-foreground: #fbf1c7;
@@ -42,17 +42,25 @@ style: |
 - <gr>vis.js</gr>
 
 ---
-### Интересный факт:
+### Ещё немного об используемых <g>технологиях</g>
+![bg right](img/early.png)
+
+---
+### Изначальный стэк технологий
+![bg left w:80%](img/initial_stack.svg)
+
+---
+### Интересный факт
 При разработке первой рабочей версии редактора
 страница не имела файла .css и была сделана чисто
 на <g>Bootstrap</g>
 
 ---
-### История разработки
-![bg right](img/early.png)
+# О недостатках <g>Flask-Login</g>
 
 ---
-
+### Строение <gr>токена авторизации</gr>
+![width:1180px](img/token.svg)
 
 ---
-# Спасибо за внимание :>
+# Спасибо за внимание <g>:></g>
